<resources>
    <string name="app_name">hack</string>
    <string name="register">register</string>
    <string name="email">email</string>
    <string name="password">password</string>
    <string name="login">login</string>
    <string name="click_to_login">click to login</string>
    <string name="click_to_register">click_to_register</string>
    <string name="logout">logout</string>
    <string name="details">Add details</string>
    <string name="place">place</string>
    <string name="cost">cost</string>
    <string name="phone_number">phone number</string>
    <string name="area">area</string>
    <string name="btn_add">btn_add</string>
    <string name="years">years for lease</string>
    <string name="rotations">Crop Rotations</string>
    <string name="soiltype">Soil type</string>
    <string name="watersource">Water Source</string>
    <string name="installments">Are installments available</string>
    <string name="negotiation">Is open for negotiation</string>
    <string name="buy">Buy</string>
    <string name="design">Design</string>
</resources>